Added style and cleaned up app flow

--- a/index.html
+++ b/index.html
@@ -9,24 +9,32 @@
 </head>
 
 <body>
-    <h2>Dealer</h2>
-    <div class="container dealer">
-        <h3></h3>
-    </div>
+    <main>
+        <div class="dealer hidden">
+            <h2 class=""> </h2>
+            <div class="cards">
 
-    <h2>Player</h2>
-    <div class="container player">
-        <h3></h3>
-    </div>
+            </div>
+        </div>
 
-    <h4></h4>
+        <h1 class="">100Devs Blackjack</h1>
 
-    <div class="container">
-        <button id="new" class="">New Game</button>
-        <!-- <button id="resume" class="hidden">Resume Game</button> -->
-        <button id="hit" class="hidden">Hit</button>
-        <button id="stand" class="hidden">Stand</button>
-    </div>
+        <div class="player hidden">
+            <h2 class=""></h2>
+            <div class="cards">
+
+            </div>
+            <nav>
+                <button id="new" class="">New Game</button>
+                <button id="continue" class="hidden">Cont.</button>
+                <!-- <button id="resume" class="hidden">Resume Game</button> -->
+                <button id="hit" class="hidden">Hit</button>
+                <button id="stand" class="hidden">Stand</button>
+            </nav>
+        </div>
+
+
+    </main>
 
     <script type="module" src="app.js"></script>
 </body>
