--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <main>
-        <div class="dealer hidden">
+        <div class="dealer">
             <h2 class=""> </h2>
             <div class="cards">
 
@@ -19,7 +19,7 @@
 
         <h1 class="">100Devs Blackjack</h1>
 
-        <div class="player hidden">
+        <div class="player">
             <h2 class=""></h2>
             <div class="cards">
 
