Added Blackjack class and separated DOM logic

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>100Devs BlackJack</title>
+    <title>100Devs Blackjack</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -26,8 +26,8 @@
             </div>
             <nav>
                 <button id="new" class="">New Game</button>
+                <button id="resume" class="">Resume</button>
                 <button id="continue" class="hidden">Cont.</button>
-                <!-- <button id="resume" class="hidden">Resume Game</button> -->
                 <button id="hit" class="hidden">Hit</button>
                 <button id="stand" class="hidden">Stand</button>
             </nav>
